--- a/style/style.css
+++ b/style/style.css
@@ -14,13 +14,16 @@ body {
   font-size: 1.6rem;
   line-height: 1.6;
   background-color: #f7f8fd;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
+img {
+  width: 100%;
+}
 .container {
   max-width: 130rem;
   margin: 0 auto;
 }
-.sectionNav {
+.navSection {
   width: 100%;
   background-color: #fff;
   height: 10rem;
@@ -30,5 +33,18 @@ body {
   -moz-border-radius: 1.2rem;
   -ms-border-radius: 1.2rem;
   -o-border-radius: 1.2rem;
-  box-shadow: 0 .2rem .8rem 0 rgba(99, 99, 99, .2);
+  box-shadow: 0 0.2rem 0.8rem 0 rgba(99, 99, 99, 0.2);
+  padding: 1rem 2rem;
+}
+.leftNav {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+.logoSection {
+  display: flex;
+  align-items: center;
+}
+.logoImgWrapper {
+  min-width: 5rem;
 }
