--- a/style/style.css
+++ b/style/style.css
@@ -63,3 +63,30 @@ img {
 .menuLink {
   text-decoration: none;
 }
+.rightNav {
+  display: flex;
+  align-items: center;
+  width: 20%;
+  gap: 4rem;
+}
+.groupIcon {
+  display: flex;
+  gap: 3.2rem;
+}
+
+.profileUser {
+  width: 5rem;
+  height: 5rem;
+}
+.profileUser img {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.userSection {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
